Footer links should now open in new tabs.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,10 +32,10 @@
     <footer class="site-footer">
         <span class="site-footer-credits">
           © {{ 'now' | date: "%Y" }} Vaillant Group |
-          <a href="https://www.vaillant-group.com/en/legalnotice-368494.html">Legal notice</a> |
-          <a href="https://www.vaillant-group.com/en/datenschutzerklaerung-368020.html">Privacy policy</a> |
-          <a href="https://service.dsp.vaillant-group.com">DSC service desk</a> |
-          <a href="https://teams.microsoft.com/l/team/19%3AdIqFEBHDFkjlYtVuruAJOfG2MWM0C09HXGyz7VMqJfc1%40thread.tacv2/conversations?groupId=324a4505-0836-48f4-bda3-7fc468650620&tenantId=67e4db54-80ae-4739-b54d-5ee94bd6472e">MS Teams</a>
+          <a href="https://www.vaillant-group.com/en/legalnotice-368494.html" target="_blank">Legal notice</a> |
+          <a href="https://www.vaillant-group.com/en/datenschutzerklaerung-368020.html" target="_blank">Privacy policy</a> |
+          <a href="https://service.dsp.vaillant-group.com" target="_blank">DSC service desk</a> |
+          <a href="https://teams.microsoft.com/l/team/19%3AdIqFEBHDFkjlYtVuruAJOfG2MWM0C09HXGyz7VMqJfc1%40thread.tacv2/conversations?groupId=324a4505-0836-48f4-bda3-7fc468650620&tenantId=67e4db54-80ae-4739-b54d-5ee94bd6472e" target="_blank">MS Teams</a>
         </span>
     </footer>
 </main>
